# AI_Code_Ver

./: README.md  ai_readiness_checker.py  analysis_results.json  analyze_website.py  app.py  pyproject.toml  requests.py
.github/workflows/: python.yml
ai_readiness/: analysis.py  cli.py  evaluations.py  webapp.py
bs4/: __init__.py
tests/: test_analysis.py  test_checks.py  test_cli.py  test_schema_markup.py
